historial de partidos

--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "npx prisma generate"
   },
   "dependencies": {
     "@hookform/resolvers": "latest",
-    "@prisma/client": "latest",
+    "@next/swc-wasm-nodejs": "^13.5.10",
+    "@next/swc-win32-x64-msvc": "^15.2.4",
+    "@prisma/client": "^6.5.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -49,7 +52,7 @@
     "lucide-react": "^0.454.0",
     "next": "^15.2.4",
     "next-themes": "latest",
-    "prisma": "latest",
+    "prisma": "^6.5.0",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
